feat(view): Add SearchMainActivity.kt
- Added SearchMainActivity which is activity for activity_search.xml

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -27,8 +27,7 @@
             android:layout_height="wrap_content"
             android:text="@string/no_search_result_label"
             android:textColor="#9E9E9E"
-            android:textSize="16sp"
-            android:visibility="gone" />
+            android:textSize="16sp" />
     </LinearLayout>
 
 
