--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
         android:layout_height="50dp"/>
 
     <ImageView
+        android:id="@+id/close"
         android:src="@drawable/close"
         android:layout_marginLeft="360dp"
         android:layout_marginTop="20dp"
