--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,18 @@
     tools:context=".MainActivity2">
 
     <TextView
+        android:id="@+id/nosearch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="검색 결과가 없습니다."
         android:layout_gravity="center"/>
+
+    <ListView
+        android:id="@+id/ListView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:visibility="gone" />
 
     <EditText
         android:id="@+id/text"
