--- a/app/src/main/res/layout/place_card.xml
+++ b/app/src/main/res/layout/place_card.xml
@@ -5,6 +5,7 @@
     android:layout_height="90dp">
     
     <ImageView
+        android:id="@+id/place_img"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:src="@drawable/cafe"    />
@@ -19,6 +20,7 @@
         android:gravity="left">
 
         <TextView
+            android:id="@+id/place_name"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="2"
@@ -27,6 +29,7 @@
             android:textSize="30sp" />
 
         <TextView
+            android:id="@+id/place_location"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -42,6 +45,7 @@
         android:layout_weight="1"/>
 
     <TextView
+        android:id="@+id/place_category"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_gravity="right"
