--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,8 @@
                 android:layout_height="30dp"
                 android:layout_marginTop="22dp"
                 android:layout_marginLeft="330dp"
-                android:src="@drawable/close" />
+                android:src="@drawable/close"
+                android:background="?attr/selectableItemBackground"/>
 
         </FrameLayout>
 
