--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:background="#CA7D7D"
+        android:background="#80CFBFEC"
         android:id="@+id/tab_form"
         android:layout_height="0dp"
         android:layout_width="match_parent"
