feat: 검색 기록 가로 리스트뷰 구현
- 검색 기록을 가로 리스트뷰로 표시하도록 수정
- 검색어를 입력하면 타임스탬프 기록이 리스트에 추가되도록 설정
- X 버튼을 눌러서 검색 기록을 삭제할 수 있는 기능 추가
- 저장된 검색어 목록을 가로 스크롤할 수 있도록 구현

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,14 @@
     </LinearLayout>
 
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/searchHistoryRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        />
+
+
     <TextView
         android:id="@+id/resultTextView"
         android:layout_width="match_parent"
