--- a/app/src/main/res/layout/tab_card.xml
+++ b/app/src/main/res/layout/tab_card.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
+    android:layout_marginEnd="10dp">
 
     <ImageView
         android:id="@+id/tab_close_button"
