--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:id="@+id/search"
+        android:id="@+id/llSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
@@ -37,16 +37,16 @@
     </LinearLayout>
 
     <View
-        android:id="@+id/view"
+        android:id="@+id/vContour"
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_marginHorizontal="30dp"
         android:background="@color/black"
-        app:layout_constraintTop_toBottomOf="@+id/search"
+        app:layout_constraintTop_toBottomOf="@+id/llSearch"
         tools:layout_editor_absoluteX="30dp" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/searchList"
+        android:id="@+id/rvSearchList"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
@@ -54,24 +54,23 @@
         android:scrollbars="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/placeList"
-        app:layout_constraintTop_toBottomOf="@+id/view"
-        tools:layout_editor_absoluteY="0dp">
+        app:layout_constraintBottom_toTopOf="@+id/rvPlaceList"
+        app:layout_constraintTop_toBottomOf="@+id/vContour">
 
     </androidx.recyclerview.widget.RecyclerView>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/placeList"
+        android:id="@+id/rvPlaceList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchList"
-        tools:layout_editor_absoluteX="0dp">
+        app:layout_constraintTop_toBottomOf="@+id/rvSearchList">
 
 
     </androidx.recyclerview.widget.RecyclerView>
 
     <TextView
+        android:id="@+id/tvNoData"
         android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
