feat: Add search function of place list

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,13 +20,15 @@
         tools:layout_editor_absoluteX="30dp">
 
         <EditText
+            android:id="@+id/etSearch"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="9"
             android:background="@null"
-            android:hint="검색어를 입력해 주세요." />
+            android:hint="@string/search_placeholder" />
 
         <ImageButton
+            android:id="@+id/imgClose"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -71,10 +73,9 @@
 
     <TextView
         android:id="@+id/tvNoData"
-        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="검색 결과가 없습니다."
+        android:text="@string/search_no_data"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
