--- a/app/src/main/res/layout/place_item.xml
+++ b/app/src/main/res/layout/place_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="80dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -9,17 +9,18 @@
         android:id="@+id/ivLocation"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginVertical="20dp"
+        android:layout_marginVertical="5dp"
         android:src="@drawable/location"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:scaleType="centerInside"/>
 
     <LinearLayout
         android:id="@+id/llPlaceInformation"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginVertical="10dp"
+        android:layout_marginVertical="5dp"
         android:orientation="vertical"
         android:gravity="center"
         app:layout_constraintTop_toTopOf="parent"
@@ -29,18 +30,20 @@
         <TextView
             android:id="@+id/tvPlaceName"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
+            android:layout_marginHorizontal="5dp"
             android:gravity="center_vertical"
             tools:text="name"
-            android:textSize="40sp"/>
+            android:textSize="25sp"/>
 
         <TextView
             android:id="@+id/tvPlaceAddress"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="20dp"
+            android:layout_marginHorizontal="5dp"
             android:gravity="center_vertical"
             tools:text="address"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:textColor="@color/gray"/>
     </LinearLayout>
 
