--- a/app/src/main/res/layout/activity_item_view.xml
+++ b/app/src/main/res/layout/activity_item_view.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="120dp"
-    android:layout_height="50dp"
-    tools:context=".itemView">
+    android:layout_height="50dp">
 
     <TextView
         android:id="@+id/result"
@@ -16,6 +15,7 @@
         android:layout_height="wrap_content"/>
 
     <ImageView
+        android:id="@+id/delete"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginLeft="15dp"
