--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -6,12 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <EditText
+    <androidx.appcompat.widget.SearchView
         android:id="@+id/text"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="4dp"
         android:hint="검색어를 입력해주세요."
+        app:iconifiedByDefault="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
