--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <androidx.appcompat.widget.SearchView
-        android:id="@+id/text"
+        android:id="@+id/search_text"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="4dp"
