--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -26,16 +26,16 @@
         android:layout_marginEnd="16dp"
         android:background="@drawable/close"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/text" />
+        app:layout_constraintTop_toTopOf="@+id/search_text" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerHor"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="@+id/text"
-        app:layout_constraintStart_toStartOf="@+id/text"
-        app:layout_constraintTop_toBottomOf="@+id/text" />
+        app:layout_constraintEnd_toEndOf="@+id/search_text"
+        app:layout_constraintStart_toStartOf="@+id/search_text"
+        app:layout_constraintTop_toBottomOf="@+id/search_text" />
 
     <TextView
         android:id="@+id/nosearch"
