--- a/app/src/main/res/layout/activity_item_view.xml
+++ b/app/src/main/res/layout/activity_item_view.xml
@@ -13,13 +13,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <ImageView
+    <Button
         android:id="@+id/delete"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="10dp"
-        android:src="@drawable/close"/>
+        android:background="@drawable/close"/>
 
 
 </FrameLayout>
