--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -8,67 +8,59 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:id="@+id/input_form"
-        android:layout_height="0dp"
-        android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:layout_weight="1">
+    <EditText
+        android:id="@+id/input"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:hint="검색어를 입력해 주세요."
+        android:inputType="text"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp">
-
-            <EditText
-                android:id="@+id/input"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="text"
-                android:hint="검색어를 입력해 주세요."/>
-
-            <ImageView
-                android:id="@+id/close_button"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginTop="22dp"
-                android:layout_marginLeft="330dp"
-                android:src="@drawable/close"
-                android:background="?attr/selectableItemBackground"/>
-
-        </FrameLayout>
-
-    </LinearLayout>
+    <ImageView
+        android:id="@+id/close_button"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="16dp"
+        android:src="@drawable/close"
+        android:background="?attr/selectableItemBackground"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:background="#80CFBFEC"
         android:id="@+id/tab_recyclerview"
-        android:layout_height="0dp"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        app:layout_constraintTop_toBottomOf="@id/input"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:layout_weight="1" />
 
-    <LinearLayout
-        android:id="@+id/result_form"
+    <TextView
+        android:id="@+id/no_result_textview"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:layout_weight="8">
+        app:layout_constraintVertical_weight="1"
+        app:layout_constraintTop_toBottomOf="@id/tab_recyclerview"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:gravity="center"
+        android:text="검색결과가 없습니다."
+        android:visibility="visible" />
 
-        <TextView
-            android:id="@+id/no_result_textview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="검색결과가 없습니다."
-            android:visibility="visible"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintVertical_weight="1"
+        app:layout_constraintTop_toBottomOf="@id/tab_recyclerview"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone"/>
-
-    </LinearLayout>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
