--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -27,16 +27,17 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:padding="8dp"/>
+        android:padding="8dp"
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/no_results"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:text="@string/no_search_result_label"
         android:textColor="#9E9E9E"
         android:textSize="16sp"
-        android:visibility="gone"
+        android:visibility="visible"
         android:gravity="center"/>
 
 </LinearLayout>
