chore: move Code From Week 2 Assignment

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="location_pin_green">#1DCE9C</color>
+    <color name="colorDivision">#e0e0e0</color>
 </resources>
