--- a/app/src/main/res/layout/place_item.xml
+++ b/app/src/main/res/layout/place_item.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="10dp">
+    android:padding="5dp">
 
     <ImageView
         android:id="@+id/marker"
@@ -23,6 +23,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/address"
         android:layout_marginStart="10dp"
+        android:maxLines="1"
         android:text="place"
         android:textSize="17sp"
         />
