--- a/app/src/main/res/layout/saved_search_keyword_item.xml
+++ b/app/src/main/res/layout/saved_search_keyword_item.xml
@@ -5,19 +5,19 @@
     android:layout_height="50dp">
 
     <TextView
-        android:id="@+id/delSavedSearchWord"
+        android:id="@+id/delSavedSearchKeyword"
         android:layout_width="50dp"
         android:layout_height="match_parent"
         android:gravity="center"
         android:text="X"
-        app:layout_constraintRight_toLeftOf="@+id/SavedSearchWord" />
+        app:layout_constraintRight_toLeftOf="@+id/SavedSearchKeyword" />
 
     <TextView
-        android:id="@+id/SavedSearchWord"
+        android:id="@+id/SavedSearchKeyword"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:gravity="center"
         android:text="cafe"
-        app:layout_constraintLeft_toRightOf="@+id/delSavedSearchWord" />
+        app:layout_constraintLeft_toRightOf="@+id/delSavedSearchKeyword" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
