refactor: 패키지 구조 변경 및 가독성 개선
- Use Case로 기능별 클래스 생성
- 기존 Location DTO를 Place로 이름 변경
- 패키지 구조 재구성
- 가독성 개선을 위한 전반적인 변수, 함수명 변경

--- a/app/src/main/res/layout/log_item.xml
+++ b/app/src/main/res/layout/log_item.xml
@@ -4,8 +4,8 @@
 
     <data>
         <variable
-            name="location"
-            type="campus.tech.kakao.map.model.Location" />
+            name="place"
+            type="campus.tech.kakao.map.domain.model.Place" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
@@ -27,7 +27,7 @@
             android:id="@+id/tvLog"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{location.name}"
+            android:text="@{place.place_name}"
             android:textStyle="bold"
             android:layout_marginLeft="12dp"
             app:layout_constraintTop_toTopOf="parent"
