feat: clicking search window to go search activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
                 android:hint="@string/search_input_hint" />
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/search_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/search_24px" />
