충남대 Android 노수진 3주차 과제 - Step0 (#64)
* Initial commit

* docs: 1단계를 위한 기능 목록 작성

* layout: 검색 기능을 위한 기본 레이아웃 구현

* feat: SQLite를 사용하여 검색어 저장 기능 구현

- DatabaseHelper 클래스 추가하여 SQLite 데이터베이스 생성 및 관리
- Search 객체로 데이터베이스 테이블 스키마 정의
- SearchRepository 클래스 추가하여 데이터베이스 작업 처리
- SearchViewModel 클래스 추가하여 ViewModel에서 StateFlow 사용
- MainActivity에서 검색어 입력 시 데이터베이스에 저장 및 전체 데이터 로그 출력

* feat: Place 데이터베이스 생성 및 더미 데이터 추가

- Place 테이블을 생성하고 초기 데이터 삽입 로직 추가
- MainActivity에서 Place 데이터를 일괄적으로 삽입하는 함수 추가
- DatabaseHelper에서 Place 테이블 생성 로직 구현
- SearchRepository에서 Place 데이터 추가 및 조회 함수 구현
- ViewModel에서 Place 데이터 관리를 위한 로직 추가

* feat: 검색바 X 버튼 삭제 기능 구현

- 검색어 입력 후 Enter 키를 누르면 검색어가 저장됨
- X 버튼을 눌러 입력된 검색어를 삭제할 수 있음

* feat: 검색 기록 가로 리스트뷰 구현

- 검색 기록을 가로 리스트뷰로 표시하도록 수정
- 검색어를 입력하면 타임스탬프 기록이 리스트에 추가되도록 설정
- X 버튼을 눌러서 검색 기록을 삭제할 수 있는 기능 추가
- 저장된 검색어 목록을 가로 스크롤할 수 있도록 구현

* feat: 검색 결과와 장소 검색 결과 출력 기능 추가

- 검색 기록을 가로 스크롤 가능한 RecyclerView로 표시
- 검색어 입력 시 검색 결과를 SQLite에 추가
- 검색 결과에 따라 장소 목록을 세로 스크롤 가능한 RecyclerView로 표시
- 장소 목록이 없을 경우 "검색 결과가 없습니다" 메시지 표시
- 초기 화면에서는 장소 목록을 표시하지 않음

* feat: 검색 기록 아이템 클릭 시 해당 키워드로 장소 검색 기능 추가

- 검색 기록 아이템 클릭 시 해당 키워드로 장소 검색을 실행하도록 수정
- 검색 기록 RecyclerView에서 아이템 클릭 이벤트 추가

* refactor: README 수정

* feat: android-map-keyword 레포 가져오기

* refactor: SearchHistoryRecyclerViewAdapter에서 ViewModel 분리

- SearchHistoryRecyclerViewAdapter에서 ViewModel을 직접 참조
- Adapter 생성 이 이벤트 처리를 위한 람다 함수 도입

* refactor: DataBinding 및 BindingAdapter를 이용한 검색 기능 리팩토링

- DataBinding을 활용하여 EditText와 RecyclerView의 데이터 바인딩 구현
- BindingAdapter를 사용하여 RecyclerView의 데이터 갱신 및 이벤트 처리 로직 개선
- ViewModel과 UI 간의 StateFlow를 통해 데이터 흐름을 원활하게 관리
- 검색 결과 표시 및 "검색 결과 없음" 메시지 가시성 전환 로직 수정
- 코드 가독성 및 유지보수성을 위한 전반적인 구조 개선

---------

Co-authored-by: MyStoryG <bookwriterseo@gmail.com>

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <data>
+        <variable
+            name="viewModel"
+            type="campus.tech.kakao.map.viewmodel.SearchViewModel" />
+    </data>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".MainActivity">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:background="@drawable/linear_layout_with_underline"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/searchEditText"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="@string/search_hint"
+                android:padding="8dp"
+                android:background="@null"
+                android:imeOptions="actionDone"
+                android:inputType="text"
+                android:text="@={viewModel.searchKeyword}" />
+
+            <ImageView
+                android:id="@+id/clearButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_close_resize"
+                android:padding="8dp"
+                android:layout_gravity="center"
+                android:contentDescription="@string/clear_text"
+                android:onClick="@{() -> viewModel.onClearButtonClicked()}" />
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/searchHistoryRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" />
+
+        <TextView
+            android:id="@+id/resultPlaceDataTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/no_search_result"
+            android:visibility="@{viewModel.places.isEmpty() ? android.view.View.VISIBLE : android.view.View.GONE}" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/placeResultRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_marginTop="8dp"
+            android:visibility="@{viewModel.places.isEmpty() ? android.view.View.GONE : android.view.View.VISIBLE}" />
+    </androidx.appcompat.widget.LinearLayoutCompat>
+</layout>
