--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="darkgray">#323232</color>
+    <color name="gray">#7D7D7D</color>
+    <color name="lightgray">#D9D9D9</color>
+    <color name="itemBg">#D2C5FB</color>
+
 </resources>
