feat: 지도 표시 및 화면 이동 구현
- 초기에 Map API 사용에 대해 잘 알지 못하고 작성한 기능 목록을 수정했습니다.

--- a/app/src/main/res/layout/activity_place.xml
+++ b/app/src/main/res/layout/activity_place.xml
@@ -5,12 +5,14 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context=".presentation.PlaceActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="horizontal"
         android:padding="16dp">
 
@@ -34,25 +36,24 @@
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scrollbars="horizontal"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:paddingVertical="8dp">
+        android:paddingVertical="8dp"
+        android:scrollbars="horizontal">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/historyRecyclerView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            />
+            android:orientation="horizontal" />
     </HorizontalScrollView>
 
     <TextView
         android:id="@+id/emptyMessage"
         android:layout_width="match_parent"
-        android:layout_weight="1"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_weight="1"
         android:gravity="center"
         android:text="검색 결과가 없습니다"
         android:textSize="20sp"
@@ -64,6 +65,6 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="vertical"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
